--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                  <a href="./CRUD-Niveles/index.html">
                     <li>Niveles</li>
                  </a>
-                 <a href="./CRUD-Ejemplos/index.html">
+                 <a href="./CRUD-Ejemplos/index.php">
                     <li>Ejemplos</li>
                  </a>
             </ul>
